style(global.scss): fix spacings

--- a/apps/web/src/assets/styles/global.scss
+++ b/apps/web/src/assets/styles/global.scss
@@ -1,4 +1,4 @@
-@import '~/utils';
+@import "~/utils";
 
 *,
 *::before,
@@ -23,6 +23,7 @@
   --bedrock-simple-button-click: rgb(207, 208, 212);
   --slider-active: rgb(60, 133, 39);
   --selection-color: rgba(60, 133, 39, 1);
+  --caret-color: rgba(85, 139, 65, 1);
   --background-color: rgb(14, 14, 14);
 
   --padding-small: 2.5px;
@@ -41,8 +42,8 @@
 }
 
 button,
-input[type='submit'],
-input[type='reset'] {
+input[type="submit"],
+input[type="reset"] {
   background: none;
   color: inherit;
   border: none;
@@ -52,23 +53,31 @@ input[type='reset'] {
 }
 
 @font-face {
-  font-family: 'Minecraft';
-  src: local('Minecraft'), url(~/assets/fonts/minecraft/Minecraft-Normal.ttf) format('truetype');
+  font-family: "Minecraft";
+  src:
+    local("Minecraft"),
+    url(~/assets/fonts/minecraft/Minecraft-Normal.ttf) format("truetype");
 }
 
 @font-face {
-  font-family: 'Mojangles';
-  src: local('Mojangles'), url(~/assets/fonts/mojangles/Mojangles.ttf) format('truetype');
+  font-family: "Mojangles";
+  src:
+    local("Mojangles"),
+    url(~/assets/fonts/mojangles/Mojangles.ttf) format("truetype");
 }
 
 @font-face {
-  font-family: 'MinecraftTen';
-  src: local('MinecraftTen'), url(~/assets/fonts/minecraft/MinecraftTen.ttf) format('truetype');
+  font-family: "MinecraftTen";
+  src:
+    local("MinecraftTen"),
+    url(~/assets/fonts/minecraft/MinecraftTen.ttf) format("truetype");
 }
 
 @font-face {
-  font-family: 'MinecraftFive';
-  src: local('MinecraftFive'), url(~/assets/fonts/minecraft/MinecraftFive.ttf) format('truetype');
+  font-family: "MinecraftFive";
+  src:
+    local("MinecraftFive"),
+    url(~/assets/fonts/minecraft/MinecraftFive.ttf) format("truetype");
 }
 
 section {
@@ -79,22 +88,16 @@ section {
   flex: none;
   width: 60%;
   max-width: $breakpoint-laptopL;
-}
 
-@media screen and (max-width: $breakpoint-laptopL) {
-  section {
+  @media (max-width: $breakpoint-laptopL) {
     width: 60%;
   }
-}
 
-@media screen and (max-width: $breakpoint-laptop) {
-  section {
+  @media (max-width: $breakpoint-laptop) {
     width: 85%;
   }
-}
 
-@media screen and (max-width: $breakpoint-tablet) {
-  section {
+  @media (max-width: $breakpoint-tablet) {
     width: 90%;
   }
 }
